--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <maven.compiler.target>13</maven.compiler.target>
         <maven.compiler.source>13</maven.compiler.source>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <junit-jupiter.version>5.7.0-M1</junit-jupiter.version>
+        <junit-jupiter.version>5.4.2</junit-jupiter.version><!-- Should be 5.4.2 for Mockito-Junit-Jupiter 3.3.3 -->
         <jacoco.version>0.8.5</jacoco.version>
         <guice.version>4.2.2</guice.version>
         <tika-parsers.version>1.23</tika-parsers.version>
@@ -42,12 +42,26 @@
         <lombok.version>1.18.12</lombok.version>
         <maven-surefire-report-plugin.version>3.0.0-M4</maven-surefire-report-plugin.version>
         <maven-project-info-reports-plugin.version>3.1.0</maven-project-info-reports-plugin.version>
-        <maven-site-plugin.version>3.4</maven-site-plugin.version>
-        <doxia-module-markdown.version>1.6</doxia-module-markdown.version>
+        <maven-site-plugin.version>3.9.0</maven-site-plugin.version>
+        <doxia-module-markdown.version>1.9.1</doxia-module-markdown.version>
         <wagon-gitsite.version>0.3.1</wagon-gitsite.version>
         <maven-scm-provider-gitexe.version>1.4</maven-scm-provider-gitexe.version>
         <maven-scm-manager-plexus.version>1.4</maven-scm-manager-plexus.version>
         <javax.activation.version>1.1</javax.activation.version>
+        <mockito-junit-jupiter.version>3.3.3</mockito-junit-jupiter.version>
+        <jaudiotagger.version>2.2.5</jaudiotagger.version>
+        <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
+        <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
+        <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
+        <maven-install-plugin.version>3.0.0-M1</maven-install-plugin.version>
+        <maven-deploy-plugin.version>3.0.0-M1</maven-deploy-plugin.version>
+        <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
+        <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
+        <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
+        <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
+        <start-class>com.adamclmns.jamm.app.Application</start-class>
     </properties>
 
     <repositories>
@@ -74,7 +88,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>3.3.3</version>
+            <version>${mockito-junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -116,7 +130,7 @@
             <dependency>
                 <groupId>net.jthink</groupId>
                 <artifactId>jaudiotagger</artifactId>
-                <version>2.2.5</version>
+                <version>${jaudiotagger.version}</version>
             </dependency>
             <!-- MP3 Playback -->
             <dependency>
@@ -133,28 +147,27 @@
                 <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
                 <plugin>
                     <artifactId>maven-clean-plugin</artifactId>
-                    <version>3.1.0</version>
+                    <version>${maven-clean-plugin.version}</version>
                 </plugin>
                 <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
                 <plugin>
                     <artifactId>maven-resources-plugin</artifactId>
-                    <version>3.0.2</version>
+                    <version>${maven-resources-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.1</version>
+                    <version>${maven-compiler-plugin.version}</version>
                 </plugin>
                 <!-- Make that jar executable -->
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <version>${spring-boot-maven-plugin.version}</version>
-                    <!-- FIXME Define ${start-class} -->
-                    <!--          <configuration>-->
-                    <!--            <mainClass>${start-class}</mainClass>-->
-                    <!--            <layout>ZIP</layout>-->
-                    <!--          </configuration>-->
+                              <configuration>
+                                <mainClass>${start-class}</mainClass>
+                                <layout>ZIP</layout>
+                              </configuration>
                     <executions>
                         <execution>
                             <goals>
@@ -168,46 +181,45 @@
                     <groupId>org.openjfx</groupId>
                     <artifactId>javafx-maven-plugin</artifactId>
                     <version>${javafx-maven-plugin.version}</version>
-                    <!-- FIXME Define ${start-class} -->
-                    <!--          <configuration>-->
-                    <!--            <mainClass>${start-class}</mainClass>-->
-                    <!--            <includePathExceptionsInClasspath>true</includePathExceptionsInClasspath>-->
-                    <!--          </configuration>-->
+                              <configuration>
+                                <mainClass>${start-class}</mainClass>
+                                <includePathExceptionsInClasspath>true</includePathExceptionsInClasspath>
+                              </configuration>
                 </plugin>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.1</version>
+                    <version>${maven-surefire-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.0.2</version>
+                    <version>${maven-jar-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-install-plugin</artifactId>
-                    <version>2.5.2</version>
+                    <version>${maven-install-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-deploy-plugin</artifactId>
-                    <version>2.8.2</version>
+                    <version>${maven-deploy-plugin.version}</version>
                 </plugin>
                 <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
                 <plugin>
                     <artifactId>maven-site-plugin</artifactId>
-                    <version>3.7.1</version>
+                    <version>%${maven-site-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-project-info-reports-plugin</artifactId>
-                    <version>3.0.0</version>
+                    <version>${maven-project-info-reports-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>versions-maven-plugin</artifactId>
-                    <version>2.7</version>
+                    <version>${versions-maven-plugin.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-enforcer-plugin</artifactId>
-                    <version>3.0.0-M3</version>
+                    <version>${maven-enforcer-plugin.version}</version>
                     <executions>
                         <execution>
                             <id>enforce-maven</id>
@@ -216,8 +228,16 @@
                             </goals>
                             <configuration>
                                 <rules>
+                                    <requireJavaVersion>
+                                        <version>13</version>
+                                    </requireJavaVersion>
+                                    <dependencyConvergence/>
+                                    <reactorModuleConvergence>
+                                        <message>The reactor is not valid</message>
+                                        <ignoreModuleDependencies>true</ignoreModuleDependencies>
+                                    </reactorModuleConvergence>
                                     <requireMavenVersion>
-                                        <version>3.6.1</version>
+                                        <version>3.6</version>
                                     </requireMavenVersion>
                                 </rules>
                             </configuration>
@@ -262,7 +282,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-source-plugin</artifactId>
-                    <version>3.2.1</version>
+                    <version>${maven-source-plugin.version}</version>
                     <executions>
                         <execution>
                             <id>attach-sources</id>
@@ -276,7 +296,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.2.0</version>
+                    <version>${maven-javadoc-plugin.version}</version>
                     <configuration>
                         <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
                     </configuration>
