scaffolding.Preparing data flow...? maybe? I'm just ad-libing here...

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -33,6 +33,10 @@
             <groupId>com.adamclmns.jamm</groupId>
             <artifactId>core-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.adamclmns.jamm</groupId>
+            <artifactId>disk-persistence</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
