--- a/jamm-core-impl/pom.xml
+++ b/jamm-core-impl/pom.xml
@@ -3,11 +3,28 @@
     <modelVersion>4.0.0</modelVersion>
 
 
-    <artifactId>core-api</artifactId>
+    <artifactId>jamm-core-impl</artifactId>
 
     <description>
-        Core Functionality Defined as Interfaces
+        Core Functionality and Non-Framework code
     </description>
+    <dependencies>
+        <dependency>
+            <groupId>net.jthink</groupId>
+            <artifactId>jaudiotagger</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.adamclmns.jamm</groupId>
+            <artifactId>jamm-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.adamclmns.jamm</groupId>
+            <artifactId>disk-persistence</artifactId>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
     <parent>
         <artifactId>jamm-root</artifactId>
@@ -15,6 +32,7 @@
         <version>1.0-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
+
 
     <build>
         <plugins>
